...
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UuN-h5-bT9">
                                        <rect key="frame" x="253.00000000000003" y="5.3333333333333286" width="100.66666666666666" height="34.333333333333336"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jug-Wa-8DC">
                                                <rect key="frame" x="0.0" y="0.0" width="49.666666666666664" height="34.333333333333336"/>
                                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system">
                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="searchTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zcA-RA-HuM"/>
...
